fixed env issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.125.0",
     "openai>=1.0.0",
-    "pandas>=3.0.0",
+    "pandas",
     "pyarrow>=23.0.0",
     "pydantic>=1.10.13",
     "pyyaml>=6.0",
     "ray>=2.53.0",
     "setuptools>=80.10.2",
-    "torch>=2.10.0",
-    "torchvision>=0.25.0",
+    "torch>=2.9.0",
+    "torchvision>=0.24.0",
     "transformers>=4.51.0",
     "uvicorn>=0.40.0",
     "vllm>=0.15.0",
